Add service account tokens
